TODO: Do not use SmartInterface for KDE 4.5 and above

- The tabs in the main window can now be re-ordered by dragging with the mouse (left click if compiled with Qt 4.5 or above, middle click for earlier versions)
- Add alternating row backgrounds in data.frame-editor

--- Version 0.5.3 - Apr-30-2010
- Fixed: Windows->Activate->Window left / right actions were always disabled
- File browser window saves settings on exit
- Several windows-specific bugs were fixed
- Plugin dialogs are shown with a larger initial size
- Add close buttons to each tab in the main document view area (not available in KDE 4.0)
- Make "print", "export as HTML", "dynamic word wrap", and "increase/descress font size" available for the console window
- Use a native menu, instead of the default TclTk-menu
- Fixed: Newly created variables were not properly updated when closing and re-opening the editor
- Added "paste special" action to script editor and console for pasting R vectors and matrices from spreadsheets
- Fix order of menus for detached windows
- File->Open R Script File now allows to specify the character encoding to use
- Fixed: No entries were added the recent script/workspaces actions after "save as"
- Initialize the output file with an appropriate encoding specification
- Add SVG support to export (graphics) plugin
- Add basic settings format settings for graphics output
- Convert all plugins to use ECMAscript instead of PHP; RKWard no longer depends on PHP
- Fixed: Frequent crashes while running automated plugintests
- Fixed: Filenames without extension would not be shown in file dialogs
- Fixed: Calling "fix(my.fun)" would remove comments
- Fixed: Removing "@CRAN@" from the repositories would break package installation

--- Version 0.5.2 - Oct-26-2009
- Add Stata data file import plugin (by Michael Ash)
- All directly accessible plugins now have at least one automated test
- Add support for the dynamic help server introduced in R 2.10.0